--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,6 +83,7 @@ jobs:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
           DARKROOM_SECRET: ${{ secrets.DARKROOM_SECRET }}
+          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
         run: |
           mkdir -p ./binaries
           EXT=""
@@ -92,8 +93,9 @@ jobs:
           go build -ldflags "\
             -X 'darkroom/cmd.Version=$VERSION' \
             -X 'darkroom/cmd.GitCommit=$GIT_COMMIT' \
-            -X 'darkroom/cmd.BuildDate=$BUILD_DATE'" \
-            -X 'darkroom/pkg/config.DarkroomSecret=$DARKROOM_SECRET' -o "$OUT"
+            -X 'darkroom/cmd.BuildDate=$BUILD_DATE' \
+            -X 'darkroom/pkg/config.DarkroomSecret=$DARKROOM_SECRET' \
+            -X 'darkroom/pkg/config.EncryptionKey=$ENCRYPTION_KEY'" -o "$OUT"
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
