--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,8 @@ jobs:
             echo "- No release notes provided for $VERSION" > RELEASE_NOTES.md
           fi
 
+          sed s/latest/v$VERSION/g DOCUMENTATION.md >> RELEASE_NOTES.md
+
       - name: Upload release notes artifact
         uses: actions/upload-artifact@v4
         with:
