--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
   build:
     name: Build Binaries
     needs: prepare
-    runs-on: ubuntu-latest
+
     strategy:
       fail-fast: false
       matrix:
@@ -62,6 +62,8 @@ jobs:
           - goos: darwin
             goarch: arm64
 
+    runs-on: ${{ matrix.goos == 'windows' && 'windows-latest' || matrix.goos == 'darwin' && 'macos-latest' || 'ubuntu-latest' }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -70,6 +72,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.21'
+
+      - name: Install Linux GUI dependencies
+        if: matrix.goos == 'linux'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev pkg-config
 
       - name: Prepare build info
         run: |
