--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,8 +57,8 @@ jobs:
             goarch: amd64
           - goos: windows
             goarch: amd64
-          - goos: darwin
-            goarch: amd64
+          # - goos: darwin
+          #   goarch: amd64
           - goos: darwin
             goarch: arm64
 
@@ -132,10 +132,10 @@ jobs:
         with:
           name: binaries-windows-amd64
           path: ./binaries
-      - uses: actions/download-artifact@v4
-        with:
-          name: binaries-darwin-amd64
-          path: ./binaries
+      # - uses: actions/download-artifact@v4
+      #   with:
+      #     name: binaries-darwin-amd64
+      #     path: ./binaries
       - uses: actions/download-artifact@v4
         with:
           name: binaries-darwin-arm64
